--- a/estilos.css
+++ b/estilos.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background: url('fondo.jpg') no-repeat top center;
+    background: url('img/fondo.jpg') no-repeat top center;
     background-size: cover;
     height: 100vh;
 }
